<resources>
    <string name="app_name">Diary</string>
    <string name="title_home">Home</string>
    <string name="title_profile">Profile</string>
    <string name="title_holiday">Holidays</string>
    <string name="title_activity_event">EventActivity</string>
    <string name="add_event">Add event</string>
    <string name="view_on_map">View locations</string>
    <string name="no_events">THERE ARE NO EVENTS ADDED</string>
    <string name="no_holidays">THERE ARE NO HOLIDAYS ADDED</string>
    <string name="title">Title</string>
    <string name="title_placeholder">Please add event name</string>
    <string name="description">Description</string>
    <string name="description_placeholder">Please add a brief description for the event</string>
    <string name="type">Type</string>
    <string name="location">Location</string>
    <string name="work">Work</string>
    <string name="personal">Personal</string>
    <string name="date">Date</string>
    <string name="click_add_date">Click to add date</string>
    <string name="done">Done</string>
    <string name="load_image">Load image</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_maps2">Map</string>
    <string name="draw_button">Draw</string>


    <string name="name">~ NAME ~</string>
    <string name="name_hint">Please enter your name</string>
    <string name="email">~ EMAIL ~</string>
    <string name="email_hint">Please enter your email</string>
    <string name="age">~ AGE ~</string>
    <string name="age_hint">Please enter your age</string>
    <string name="number_of_events">~ NUMBER OF EVENTS ~</string>
    <string name="zero">0</string>

    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>


</resources>
