<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

   <Button
       android:id="@+id/addEventButton"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/add_event"
       android:layout_margin="10dp"
       android:background="@color/colorPrimary"
       android:padding="5dp"/>

   <Button
       android:id="@+id/mapButton"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/view_on_map"
       android:layout_margin="10dp"
       android:background="@color/colorPrimary"
       android:layout_alignParentEnd="true"
       android:padding="5dp"/>

   <androidx.recyclerview.widget.RecyclerView
       android:id="@+id/eventsList"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_below="@id/addEventButton"
       android:layout_margin="10dp"/>

   <TextView
       android:id="@+id/emptyList"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:layout_below="@id/addEventButton"
       android:layout_margin="20dp"
       android:text="@string/no_events"
       android:gravity="center"
       android:letterSpacing="0.1"
       android:lineSpacingMultiplier="1.4"
       app:autoSizeTextType="uniform"
       app:autoSizeMinTextSize="15sp"
       app:autoSizeMaxTextSize="20sp"
       android:visibility="gone"/>

</RelativeLayout>